# Rendu_TPRA

.gitignore/: .gitignore
Partie_1/: CMakeLists.txt  Compilation.txt  main.cpp
Partie_1/assets/: out_camera_data.xml  settings.xml
Partie_1/include/: Calibration.hpp  Params.hpp  Settings.hpp  Vector.hpp  Vector.inl  Vertex.hpp  Window.hpp
Partie_1/src/: Calibration.cpp  Params.cpp  Window.cpp
TP_RA_Rendu_Unity/: README.txt
TP_RA_Rendu_Unity/Assets/: Test.unity  raaaa.cs  startup.cs
TP_RA_Rendu_Unity/Assets/Myo Samples/: Box On A Stick.unity
TP_RA_Rendu_Unity/Assets/Myo Samples/Scripts/: ColorBoxByPose.cs  SampleSceneGUI.cs
TP_RA_Rendu_Unity/Assets/Scripts/: CheckerboardDetection.cs
